[package]
name = "proj"
description = "Rust bindings for proj"
version = "0.1.2"
authors = [
  "Corey Farwell <coreyf@rwell.org>",
  "Alex Morega <alex@grep.ro>",
]
repository = "https://github.com/georust/rust-proj"
keywords = ["proj", "projection", "osgeo", "geo"]
license = "Apache-2.0"

[dependencies]
libc = "0.1.7"
